fix own class for top spacing of heading

--- a/sass/_article.sass
+++ b/sass/_article.sass
@@ -17,6 +17,9 @@
 
 .single-header
   width: auto
+  max-width: 95vw
+
+.top-spacing
   padding-top: 5em
 
 .single-header > h1
